spi_directio/hls_daw/example_acc/example_acc/logs/hls_run_csim_35832.backup.log
INFO: [vitis-run 60-1548] Creating build summary session with primary output C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/example_acc\example_acc.hlsrun_csim_summary, at 02/15/25 22:41:00
INFO: [vitis-run 82-31] Launching vitis_hls: vitis_hls -nolog -run csim -work_dir C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/example_acc -config C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/hls_config.cfg -cmdlineconfig C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/example_acc/hls/config.cmdline

****** Vitis HLS - High-Level Synthesis from C, C++ and OpenCL v2024.1 (64-bit)
  **** SW Build 5069499 on May 21 2024
  **** IP Build 5075265 on Wed May 22 21:45:21 MDT 2024
  **** SharedData Build 5076995 on Wed May 22 18:29:18 MDT 2024
  **** Start of session at: Sat Feb 15 22:41:03 2025
    ** Copyright 1986-2022 Xilinx, Inc. All Rights Reserved.
    ** Copyright 2022-2024 Advanced Micro Devices, Inc. All Rights Reserved.

source C:/Xilinx/Vitis_HLS/2024.1/scripts/vitis_hls/hls.tcl -notrace
INFO: [HLS 200-10] For user 'Dawso' on host 'laptop-dp0ojsk0' (Windows NT_amd64 version 10.0) on Sat Feb 15 22:41:04 -0600 2025
INFO: [HLS 200-10] In directory 'C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc'
INFO: [HLS 200-2005] Using work_dir C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/example_acc 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc.cpp' from C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/hls_config.cfg(12)
INFO: [HLS 200-10] Adding design file 'C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=C:\Users\Dawso\GIM-2024-2025\spi_directio\hls_daw\send_data.cpp' from C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/hls_config.cfg(13)
INFO: [HLS 200-10] Adding design file 'C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/send_data.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc_tb.cpp' from C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/hls_config.cfg(8)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc_tb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file_cflags=C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc_tb.cpp,-D HW_COSIM' from C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/hls_config.cfg(9)
INFO: [HLS 200-1465] Applying ini 'syn.top=example_acc' from C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/hls_config.cfg(7)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xczu3eg-sfvc784-1-e' from C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xczu3eg-sfvc784-1-e'
INFO: [HLS 200-1465] Applying ini 'clock=10ns' from C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/hls_config.cfg(10)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying ini 'clock_uncertainty=2ns' from C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/hls_config.cfg(11)
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 2ns.
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/Users/Dawso/GIM-2024-2025/spi_directio/hls_daw/example_acc/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../example_acc_tb.cpp in debug mode
csim.mk:88: recipe for target 'obj/example_acc_tb.o' failed
In file included from ../../../../../example_acc_tb.cpp:4:
In file included from ../../../../../GIM_comm.h:1:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/ap_axi_sdata.h:15:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/ap_int.h:10:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/ap_common.h:658:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/ap_private.h:68:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/hls_half.h:26:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/hls_fpo.h:140:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/Vitis_HLS/2024.1/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/Vitis_HLS/2024.1/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../../example_acc_tb.cpp:7:5: error: functions that differ only in their return type cannot be overloaded
int example_acc(int w1, int w2, miso &data_out);
~~~ ^
../../../../../GIM_comm.h:27:6: note: previous declaration is here
void example_acc(
~~~~ ^
1 warning and 1 error generated.
make: *** [obj/example_acc_tb.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 2 seconds. Total CPU system time: 1 seconds. Total elapsed time: 8.341 seconds; peak allocated memory: 231.582 MB.
